<resources>
    <string name="app_name">Abhijit Bagal</string>
    <string name="title_activity_restaurant_item_details">restaurant_item_detailsActivity</string>
    <string name="title_activity_restaurant_cart">restaurant_cartActivity</string>
    <string name="my_cart">My Cart</string>
    <string name="view_all">View All</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="total_cost">Total Cost</string>
    <string name="view_cart_5_items">VIEW CART (5 ITEMS)</string>
    <string name="inka_restaurant">Inka Restaurant</string>
    <string name="book_a_table">Book a Table</string>
    <string name="add">Add</string>
</resources>